[package]
name = "easy_pow"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "pow_benchmark"
harness = false

[features]
default = ["backend-rust-crypto"]
backend-rust-crypto = ["md-5", "sha1", "sha2"]
backend-openssl = ["openssl"]

[dependencies]
crossbeam = "0.8.2"
thiserror = "1.0.50"

# rust-crypto backend
md-5 = { version = "0.10.6", features = ["asm"], optional = true }
sha1 = { version = "0.10.6", features = ["asm"], optional = true }
sha2 = { version = "0.10.8", features = ["asm"], optional = true}

# OpenSSL backend
openssl = { version = "0.10", optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"
